establish connection between User DB and login/register option.